package v1

import (
	"context"
	"log"
	pb "obms/internal/user/proto"
)

// UserServiceServer implements the UserService gRPC service.
type UserServiceServer struct{}

// CreateUser implements the CreateUser RPC method.
func (s *UserServiceServer) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
	// Implement user creation logic here
	log.Printf("Received create user request: %+v", req)
	return &pb.CreateUserResponse{User: &pb.User{}}, nil
}

// GetUser implements the GetUser RPC method.
func (s *UserServiceServer) GetUser(ctx context.Context, req *pb.GetUserRequest) (*pb.GetUserResponse, error) {
	// Implement user retrieval logic here
	log.Printf("Received get user request: %+v", req)
	return &pb.GetUserResponse{User: &pb.User{}}, nil
}

// AuthenticateUser implements the AuthenticateUser RPC method.
func (s *UserServiceServer) AuthenticateUser(ctx context.Context, req *pb.AuthenticateUserRequest) (*pb.AuthenticateUserResponse, error) {
	// Implement user authentication logic here
	log.Printf("Received authenticate user request: %+v", req)
	return &pb.AuthenticateUserResponse{User: &pb.User{}, Token: "sample_token"}, nil
}
